tests/error/err-not-func-0.scm
(define a 42)

(a 2 3 4 5)
